Fix a bug with radios overlapping the header

--- a/components/expander/styles.scss
+++ b/components/expander/styles.scss
@@ -10,6 +10,7 @@
   cursor: pointer;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 
   .colored_bar {
     background: grey;
